# calibration_summary_utils

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
calibration_summary_utils/: aggregate_figures.py  generate_scoreset_files.py  prior_fig.py  select_final_models.py  summarize_fits.py  summarize_priors.py  visualize_fits.py
src/calibration_summary_utils/: aggregate_figures.py  generate_scoreset_files.py  prior_fig.py  select_final_models.py  summarize_fits.py  summarize_priors.py  summary_utils.py  visualize_fits.py
test/: example_table.csv  summary.json  test_summary.py
